# EasyLook-BoomBang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  SECURITY_IMPROVEMENTS.md
.github/workflows/: build.yml
assets/: create_logo.py
boombang-palette-app/: SECURITY.md  build-release.bat  copy-cache.ps1  index.html  package.json  run-tauri-vs.bat  run-tauri.bat  vite.config.ts
boombang-palette-app/src/: App.css  App.tsx  style.css
boombang-palette-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
boombang-palette-app/src-tauri/capabilities/: default.json
boombang-palette-app/src-tauri/icons/: icon.icns
boombang-palette-app/src-tauri/permissions/: default.toml
boombang-palette-app/src-tauri/permissions/autogenerated/: apply_color_to_game.toml  get_calibration.toml  get_mouse_position.toml  load_palettes.toml  save_calibration.toml
boombang-palette-app/src-tauri/src/: main.rs
boombang-palette-app/src/components/: Logo.tsx
